[package]
name = "kitap"
version = "0.1.0"
authors = ["mandragore <gkonstandinos@gmail.com>"]
edition = "2018"

[dependencies]
tokio = "0.1.15"
tokio-io = "0.1.11"
clap = "2.32.0"
futures = "0.1.25"
byteorder = "1.3.1"
log = "0.4.6"
fern = "0.5.7"
chrono = "0.4.6"
hex = "0.3.2"
sha3 = "0.8.1"
generic-array = "0.12.0"
itertools = "0.8.0"

[[bin]]
name = "kitapd"
path = "src/server.rs"

[[bin]]
name = "kitap"
path = "src/client.rs"
